# Public-Projects

./: L2 Ridge Regularized Logistic Regression Performance Analysis.ipynb  Non-convex Numerical Optimization Methods Analysis.ipynb  README.md
Data Structures and Algorithms/Distance/: CMakeLists.txt  main.cpp
Data Structures and Algorithms/Functors/: CMakeLists.txt  main.cpp  outils.cpp
Data Structures and Algorithms/Heritage/: CMakeLists.txt
Data Structures and Algorithms/Pointers/: CMakeLists.txt  main.cpp  outils.cpp  outils.h
Data Structures and Algorithms/Quadtrees/: CMakeLists.txt  example.cpp
Data Structures and Algorithms/Quadtrees/quadtree/: CMakeLists.txt  example.cpp  quadtree.h
Functors/: outils.h
Heritage/: main.cpp  outils.h
Maths Algorithms/: Algorithme d_Euclide.py  Cercles multiples.py  Création de Fonction.py  Damier.py  Ensemble de Mandelbrot.py  Exponentiation rapide.py  Fibonacci.py  Fractal 2.py  Fractal.py  Jeu du MasterMind.py  Lambda.py  Nombre Mystere.py  Nombres Premiers.py  Spirale de Ulam.py  Triangle de pascal.py
Neural Networks/: MLP and CNN with Pytorch.ipynb  MLP from scratch.ipynb
Project - Board Game Optimal Solution with Linear Programming/: CantStop.jl  Policies_15.jl  Policies_666.jl  Question2.jl  Question3.jl  Question5.jl  Question6.jl  Question7.jl  Question8.jl  README  plot_position.jl  simulator.jl
Project - Soccer World Cup Winner/: International_prediction.ipynb  National_leagues_prediction.ipynb  data_full_ligue_1.csv  helper.py
Project - Wikipedia Comment Classification/: MALAP_Project.ipynb
(+63 files in other folders)
